--- a/MainPage.html
+++ b/MainPage.html
@@ -1,1 +1,35 @@
-<h1>Main page test</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PortFolio Main Page</title>
+    <link rel="stylesheet" href="MainPage.css">
+</head>
+<body>
+  <div class="hero">
+    <nav>
+        <img src="" alt="">
+        <ul>
+            <li><a href="./MainPage.html">Home</a></li>
+            <li><a href="#">Project</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="./Aboutme.html">About Me</a></li>
+        </ul>
+    </nav>
+    <div class="details">
+        <h1>I,m Mohit <span>Kumar</span></h1>
+        <p>This is my official Portfolio Website to showes all
+            <br> Details of Me and My Work 
+        </p>
+        <a href="">DOWNLOAD CV</a>
+    </div>
+    <div class="images">
+        <img src="./shape.png" class="shape">
+        <img src="./Programming-pana.svg" class="me">
+        
+    </div>
+  </div>
+</body>
+</html>
