--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="social">
           <li><a href="https://github.com/HeyBroooo"><img src="./icons8-github.svg"></a></li>
           <li><a href="https://www.linkedin.com/in/mohit-kumar-41b221236/"><img src="./icons8-linkedin-2.svg"></a></li>
-          <li><a href="./mailpage.html"><img src="./icons8-gmail-logo.svg"></a></li>
+          <li><a href="https://www.instagram.com/user_web__/"><img src="./icons8-instagram.svg"></a></li>
         </ul>
       </section>
    <script src="script.js"></script>
