--- a/MainPage.html
+++ b/MainPage.html
@@ -15,7 +15,7 @@
             <li><a href="./MainPage.html">Home</a></li>
             <li><a href="#">Project</a></li>
             <li><a href="Contact.html">Contact</a></li>
-            <li><a href="./Aboutme.html">About Me</a></li>
+            <li><a href="./Aboutme.html">Support</a></li>
         </ul>
     </nav>
     <div class="details">
@@ -27,7 +27,7 @@
     </div>
     <div class="images">
         <img src="./shape.png" class="shape">
-        <img src="./Programming-pana.svg" class="me">
+        <img src="./animation_640_leph2w61.gif" class="me">
         
     </div>
   </div>
