--- a/MainPage.html
+++ b/MainPage.html
@@ -15,7 +15,7 @@
             <li><a href="./MainPage.html">Home</a></li>
             <li><a href="#">Project</a></li>
             <li><a href="Contact.html">Contact</a></li>
-            <li><a href="./Aboutme.html">Support</a></li>
+            <li><a href="./support.html">Support</a></li>
         </ul>
     </nav>
     <div class="details">
