--- a/support.html
+++ b/support.html
@@ -9,16 +9,15 @@
     <link rel="stylesheet" href="support.css">
 </head>
 <body>
-    <h1>Support Us</h1>
+    <h1>Support Me</h1>
     <img src="./animation_640_leq377yn.gif" alt="loading">
     <a href="https://buy.stripe.com/test_00g17obNP93C8mY9AB">
 
     
-    <button>BUY
-    </button>
+    <button>Support</button>
 </a>
 <H3> HEY EVERYONE HOPE ALL U ARE DOING WELL <BR> 
- HELP US TO GROW 
+ HELP Me TO GROW 
 </H3>
 </body>
 </html>
