--- a/MainPage.html
+++ b/MainPage.html
@@ -26,7 +26,7 @@
         <a href="">DOWNLOAD CV</a>
     </div>
     <div class="images">
-        <img src="./shape.png" class="shape">
+        <img cla src="./shape.png" class="shape">
         <img src="./animation_640_leph2w61.gif" class="me">
         
     </div>
