--- a/support.html
+++ b/support.html
@@ -10,14 +10,13 @@
 </head>
 <body>
     <h1>Support Me</h1>
-    <img src="./animation_640_leq377yn.gif" alt="loading">
-    <a href="https://buy.stripe.com/test_00g17obNP93C8mY9AB">
+    <a  href="https://buy.stripe.com/test_00g17obNP93C8mY9AB">
 
     
-    <button>Support</button>
-</a>
-<H3> HEY EVERYONE HOPE ALL U ARE DOING WELL <BR> 
- HELP Me TO GROW 
-</H3>
+        <button class="btn">Support</button>
+    </a>
+    <img class="animation" src="./animation_640_leq377yn.gif" alt="loading">
+    <h4>Support me grow</h4>
+   
 </body>
 </html>
