--- a/MainPage.html
+++ b/MainPage.html
@@ -13,7 +13,7 @@
         <img src="" alt="">
         <ul>
             <li><a href="./MainPage.html">Home</a></li>
-            <li><a href="#">Project</a></li>
+            <li><a href="./project.html">Project</a></li>
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="./support.html">Support</a></li>
         </ul>
