--- a/support.html
+++ b/support.html
@@ -16,7 +16,7 @@
         <button class="btn">Support</button>
     </a>
     <img class="animation" src="./animation_640_leq377yn.gif" alt="loading">
-    <h4>Support me grow</h4>
+    <h4>Support me to grow</h4>
    
 </body>
 </html>
