--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="overlay"></div>
         <div class="text">
           <h3>Mohit Kumar</h3>
-          <p>Hey, I Am a Frontend Web Devloper </p>
+          <p>Hey, I Am A Web Devloper </p>
           <a href="./MainPage.html">Explore</a>
         </div>
         <ul class="social">
