--- a/project.html
+++ b/project.html
@@ -12,37 +12,34 @@
 
     <section class="hero-section">
       <div class="card-grid">
-        <a class="card" href="#">
+        <a class="card" href="https://spotifyfrontendbymohit.netlify.app">
           <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)"></div>
           <div class="card__content">
-            <p class="card__category">Category</p>
-            <h3 class="card__heading">Example Card Heading</h3>
+            <p class="card__category">Project 1</p>
+            <h3 class="card__heading">Spotify clone</h3>
           </div>
         </a>
-        <a class="card" href="#">
+        <a class="card" href="https://nextjs-website-jet-one.vercel.app/">
           <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557187666-4fd70cf76254?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
           <div class="card__content">
-            <p class="card__category">Category</p>
-            <h3 class="card__heading">Example Card Heading</h3>
+            <p class="card__category">Project 2</p>
+            <h3 class="card__heading">Netflix Clone</h3>
           </div>
         </a>
-        <a class="card" href="#">
+        <a class="card" href="champakelectronics-c3nbqyqsj-heybroooo.vercel.app">
           <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1556680262-9990363a3e6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
           <div class="card__content">
-            <p class="card__category">Category</p>
-            <h3 class="card__heading">Example Card Heading</h3>
+            <p class="card__category">Project 3</p>
+            <h3 class="card__heading">E-commerce</h3>
           </div>
         </li>
-        <a class="card" href="#">
+        <a class="card" href="https://onlineeducationfrontend.netlify.app">
           <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
           <div class="card__content">
-            <p class="card__category">Category</p>
-            <h3 class="card__heading">Example Card Heading</h3>
+            <p class="card__category">Project 4</p>
+            <h3 class="card__heading">Educational Site</h3>
           </div>
         </a>
-      <div>
-        <button class="button">Scroll Down</button>
-      </div>
     </section>
     
 </body>
