--- a/MainPage.html
+++ b/MainPage.html
@@ -23,7 +23,7 @@
         <p>This is my official Portfolio Website to showes all
             <br> Details of Me and My Work 
         </p>
-        <a href="">DOWNLOAD CV</a>
+        <a href="./cv.pdf">DOWNLOAD CV</a>
     </div>
     <div class="images">
         <img cla src="./shape.png" class="shape">
